# yolo_kidney_stone

./: LICENSE  README.md  kidney-stone-yolo12.ipynb  pyproject.tmol  pyproject.toml  stitch.md  vercel.json
.kiro/specs/kidney-stone-detection-frontend/: .config.kiro  design.md  requirements.md  tasks.md
model_result/train/: args.yaml  results.csv
web/backend/: BACKEND.md  main.py  requirements.txt
web/frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/frontend/src/lib/: apiBaseUrl.ts
