[project]
name = "kidney-stone-detection"
version = "0.1.0"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "ultralytics==8.3.*",
    "pillow>=10.0",
    "torch>=2.2",
    "slowapi>=0.1.9",
    "pytest>=8",
    "httpx>=0.27",
    "hypothesis>=6",
]

[tool.vercel]
entrypoint = "web.backend.main:app"